--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
 
-    <article>
+    <article class="card-1">
       <div class="profile">
         <img src="./images/image-daniel.jpg" alt="Daniel Clifford's profile picture">
         <div class="profile-content">
@@ -29,7 +32,7 @@
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</blockquote>
     </article>
 
-    <article>
+    <article class="card-2">
     <div class="profile">
       <img src="./images/image-jonathan.jpg" alt="Jonathan Walter's profile picture">
     <div class--="profile-content">
@@ -42,7 +45,7 @@
       for a big company. This was one of the best investments I’ve made in myself. ”</blockquote>
     </article> 
 
-    <article>
+    <article class="card-3">
       <div class="profile">
         <img src="./images/image-jeanette.jpg" alt="Jeanetter Harmon's profile picture">
         <div class="profile-content">
@@ -55,7 +58,7 @@
       while doing something I love. ”</blockquote>
     </article>
 
-    <article>
+    <article class="card-4">
       <div class="profile">
         <img src="./images/image-patrick.jpg" alt="Patrick Abrams's profile picture">
         <div class="profile-content">
@@ -71,7 +74,7 @@
       an incredible community of smart and amazing people. ”</blockquote>
     </article>
 
-    <article>
+    <article class="card-5">
       <div class="profile">
         <img src="./images/image-kira.jpg" alt="Kira Whittle's profile picture">
         <div class="profile-content">
