--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <article class="card-2">
     <div class="profile">
       <img src="./images/image-jonathan.jpg" alt="Jonathan Walter's profile picture">
-    <div class--="profile-content">
+    <div class="profile-content">
     <h2>Jonathan Walters</h2>
     <h3>Verified Graduate</h3>
     </div>
